<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrainingApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="current_ip">IP=</string>
    <string name="button_text_1">Get IP</string>
    <string name="root_status">Root Status:</string>
    <string name="button_text_2">Root</string>
    <string name="button_text_3">unRoot</string>
    <string name="button_text_4">Screenshot</string>

</resources>
