<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_getIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:text="@string/button_text_1" />

    <TextView
        android:id="@+id/textView_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_root"
        android:layout_centerHorizontal="true"
        android:text="@string/root_status"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_IP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_getIP"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:text="@string/current_ip"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_unroot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_getIP"
        android:layout_marginTop="63dp"
        android:layout_toRightOf="@+id/button_getIP"
        android:text="@string/button_text_3" />

    <Button
        android:id="@+id/button_root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_unroot"
        android:layout_alignBottom="@+id/button_unroot"
        android:layout_toLeftOf="@+id/button_getIP"
        android:text="@string/button_text_2" />

    <Button
        android:id="@+id/button_screenshot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:text="@string/button_text_4" />

</RelativeLayout>